--- a/profile-rs/Cargo.toml
+++ b/profile-rs/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 profiler_macro = {path = "../profiler_macro"}
+ark-std = { version = "0.4.0" , features = ["print-trace"]}
