--- a/profile-rs/Cargo.toml
+++ b/profile-rs/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 profiler_macro = {path = "../profiler_macro"}
-ark-std = "0.4.0"
+ark-std = { version = "0.4.0", optional = true }
 
 
 [features]
