--- a/profiler_macro/Cargo.toml
+++ b/profiler_macro/Cargo.toml
@@ -2,6 +2,7 @@
 name = "profiler_macro"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/ChengYueJia/profiler-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
