--- a/profiler_macro/Cargo.toml
+++ b/profiler_macro/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
+edition = "2021"
 name = "profiler_macro"
 version = "0.1.0"
-edition = "2021"
+authors = ["ChengYueJia"]
+description = "A library for profiler"
+keywords = ["profile", "macros"]
+license = "Apache-2.0"
 repository = "https://github.com/ChengYueJia/profiler-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
